# econflux

./: .env.example  .gitignore  README.md  pyproject.toml  rag_context.md
.obsidian/: workspace.json
src/: .bedrock_agentcore.yaml  .dockerignore  .env.example  app.py  config.py  core_agent.py  econflux_agent.py  health_check_tools.py  market_tools.py  pyproject.toml  rag_tools.py  requirements-dev.txt  requirements.txt
src/.bedrock_agentcore/econflux/: dependencies.hash
src/econflux/: __init__.py  config.py
src/econflux/agent/: __init__.py  core_agent.py
src/econflux/runtime/: __init__.py  app.py
src/econflux/test/: test_market_tools.py
src/econflux/tools/: __init__.py  market_tools.py
src/lambda/: econflux_invocation.py  econflux_invoke.md  econflux_invoke.py
src/rag/: README.md  synthetic_data_gen.py
src/tests/: prompts.md  test_prompts.sh
